estilo do modo light finalizado

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
             <div id="list-social-media">
                 <a href="">
-                    <img src="assets/img/google.png" alt="Google Logo">
+                    <img src="assets/img/icons8-google-logo-96.png" alt="Google Logo">
                 </a>
                 <a href="">
-                    <img src="assets/img/github.png" alt="GitHub Logo">
+                    <img src="assets/img/icons8-linkedin-96.png" alt="GitHub Logo">
                 </a>
                 <a href="">
-                    <img src="assets/img/icons8-instagram-240.png" alt="Instagram Logo">
+                    <img src="assets/img/icons8-github-60.png" alt="Instagram Logo">
                 </a>
             </div>
 
@@ -38,7 +38,7 @@
                     <label for="name">
                         Nome
                         <div class="input-field">
-                            <i class="fa-solid fa-user" style="color: #2e273f;"></i>
+                            <i class="fa-solid fa-user"></i>
                             <input type="text" id="name" name="name" placeholder="Digite seu nome" required>
                         </div>
                     </label>
@@ -48,7 +48,7 @@
                     <label for="email">
                         Email
                         <div class="input-field">
-                            <i class="fa-solid fa-envelope" style="color: #2e273f;"></i>
+                            <i class="fa-solid fa-envelope"></i>
                             <input type="text" id="email" name="email" placeholder="Digite seu email" required>
                         </div>
                     </label>
@@ -58,7 +58,7 @@
                     <label for="password">
                         Senha
                         <div class="input-field">
-                            <i class="fa-solid fa-key" style="color: #2e273f;"></i>
+                            <i class="fa-solid fa-key"></i>
                             <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
                         </div>
                     </label>
