modo dark finalizado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form id="login-form">
             <div id="form-header">
                 <h1>Login</h1>
-                <i id="mode-icon" class="fa-solid fa-moon" style="color: #2e273f;"></i>
+                <i id="mode-icon" class="fa-solid fa-moon"></i>
             </div>
 
             <div id="list-social-media">
@@ -39,7 +39,7 @@
                         Nome
                         <div class="input-field">
                             <i class="fa-solid fa-user"></i>
-                            <input type="text" id="name" name="name" placeholder="Digite seu nome" required>
+                            <input type="text" id="name" name="name" required>
                         </div>
                     </label>
                 </div>
@@ -49,7 +49,7 @@
                         Email
                         <div class="input-field">
                             <i class="fa-solid fa-envelope"></i>
-                            <input type="text" id="email" name="email" placeholder="Digite seu email" required>
+                            <input type="text" id="email" name="email" required>
                         </div>
                     </label>
                 </div>
@@ -59,7 +59,7 @@
                         Senha
                         <div class="input-field">
                             <i class="fa-solid fa-key"></i>
-                            <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+                            <input type="password" id="password" name="password" required>
                         </div>
                     </label>
 
