add página home redirecionamento após login

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
 
-            <button type="submit" id="login-button" onclick="logar()">
+            <button type="submit" id="login-button" onclick="logar(); return false;">
                 Entrar
             </button>
         </form>
