--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         Email
                         <div class="input-field">
                             <i class="fa-solid fa-envelope"></i>
-                            <input type="text" id="email" name="email" id="email" required>
+                            <input type="email" id="email" name="email" id="email" required>
                         </div>
                     </label>
                 </div>
