adiciona opcao de registro na pagina de login

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             <button type="submit" id="login-button" onclick="logar(); return false;">
                 Entrar
             </button>
+            <div id="register">
+                <p>
+                    Não tem uma conta?
+                    <a href="register.html">Cadastre-se</a>
+                </p>
+
+            </div>
         </form>
     </main>
 
